// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyAwesomeApp > should match snapshot 1`] = `
<div>
  <div
    data-testid="div-app"
  >
    <h1
      data-testid="first-name-title"
    >
       
      Gustavo
       
    </h1>
    <h3>
       
      Varelas
       
    </h3>
    <p
      class="mi-clase-favorita"
    >
      Elden Ring, Smash, Metal Gear
    </p>
    <p>
      4
    </p>
    <h1>
      No Activo
    </h1>
    <p
      style="background-color: rgb(250, 250, 250); border-radius: 10px; padding: 10px; margin-top: 30px;"
    >
      {"zipCode":"ABC-123","country":"España"}
    </p>
  </div>
</div>
`;

exports[`MyAwesomeApp > should match snapshot 2`] = `
<div
  data-testid="div-app"
>
  <h1
    data-testid="first-name-title"
  >
     
    Gustavo
     
  </h1>
  <h3>
     
    Varelas
     
  </h3>
  <p
    class="mi-clase-favorita"
  >
    Elden Ring, Smash, Metal Gear
  </p>
  <p>
    4
  </p>
  <h1>
    No Activo
  </h1>
  <p
    style="background-color: rgb(250, 250, 250); border-radius: 10px; padding: 10px; margin-top: 30px;"
  >
    {"zipCode":"ABC-123","country":"España"}
  </p>
</div>
`;
